--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "v-money": "^0.8.1",
+    "v-money3": "^3.20.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
